--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "conventional-changesets",
   "version": "0.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "bin": {
+    "conventional-changesets": "./dist/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx tsx src/index.ts",
+    "build": "tsc -p tsconfig.build.json"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
