--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.15.15",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "inquirer": "^12.6.0"
   }
 }
