--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020", // Modern JavaScript features
-    "module": "CommonJS", // Node.js uses CommonJS modules
+    "module": "ES6", // Node.js uses CommonJS modules
+    "moduleResolution": "bundler", // Node.js module resolution strategy
     "outDir": "dist", // Output directory for compiled files
     "rootDir": "src", // Root directory for source files
     "esModuleInterop": true, // Enable interoperability for CommonJS and ES modules
