--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "inquirer": "^12.6.0"
+    "inquirer": "^12.6.0",
+    "tinyglobby": "^0.2.13"
   }
 }
