--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020", // Modern JavaScript features
-    "module": "ES6", // Node.js uses CommonJS modules
-    "moduleResolution": "bundler", // Node.js module resolution strategy
-    "outDir": "dist", // Output directory for compiled files
-    "rootDir": "src", // Root directory for source files
-    "esModuleInterop": true, // Enable interoperability for CommonJS and ES modules
-    "forceConsistentCasingInFileNames": true, // Enforce consistent casing
-    "strict": true, // Enable all strict type-checking options
-    "skipLibCheck": true, // Skip type checking of declaration files
-    "declaration": true // Generate .d.ts files for type definitions
+    "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "rootDir": "src",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "declaration": true
   },
-  "include": ["src"], // Include the source directory
-  "exclude": ["node_modules", "dist"] // Exclude unnecessary directories
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
