--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "inquirer": "^12.6.0",
+    "@clack/prompts": "^0.10.1",
     "tinyglobby": "^0.2.13"
   }
 }
