--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@clack/prompts": "^0.10.1",
     "citty": "^0.1.6",
+    "human-id": "^4.1.1",
     "tinyglobby": "^0.2.13"
   }
 }
