--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conventional-changesets",
+  "name": "@cadamsdev/conventional-changesets",
   "version": "0.0.0",
   "type": "module",
   "main": "./dist/index.js",
