--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,3 +32,4 @@ jobs:
         uses: cadamsdev/lazy-changesets-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CHANGESET_COMMAND: 'npm run start'
