--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
       - name: Check for changesets
-        uses: cadamsdev/lazy-changesets-action@v0
+        uses: cadamsdev/lazy-changesets-action@348a2bbac69927b034ec53ddb4783db2312c6289 # v0.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CHANGESET_COMMAND: 'npm run start'
